--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2320,6 +2320,9 @@ $\text{ft}$.
 
 #+name: surface-fire-intensity-functions
 #+begin_src python
+import pyretechnics.conversion as conv
+
+
 def calc_residence_time(sigma_prime):
     return 384.0 / sigma_prime
 
@@ -2345,10 +2348,10 @@ def calc_fireline_intensity(reaction_intensity, flame_depth):
 
 def calc_flame_length(fireline_intensity):
     """
-    Returns the average flame length in ft given:
-    - fireline_intensity (Btu/ft/s)
+    Returns the average flame length (m) given:
+    - fireline_intensity :: kW/m
     """
-    return 0.45 * (fireline_intensity ** 0.46)
+    return conv.ft_to_m(0.45 * (conv.kW_m_to_Btu_ft_s(fireline_intensity) ** 0.46))
 #+end_src
 
 Because of the linear relationship between spread rate, flame depth,
@@ -2678,9 +2681,7 @@ def surface_length_to_width_ratio(effective_wind_speed):
     """
     Calculate the length_to_width_ratio of the surface fire front using eq. 9 from
     Rothermel 1991 given:
-    - effective_wind_speed :: ft/min
-
-    L/W = 1 + 0.25 * Ueff_mph
+    - effective_wind_speed :: ft/min (aligned with the slope-tangential plane)
     """
     effective_wind_speed_mph = fpm_to_mph(effective_wind_speed)
     return 1.0 + 0.25 * effective_wind_speed_mph
@@ -2708,8 +2709,6 @@ def surface_fire_eccentricity(length_to_width_ratio):
     Calculate the eccentricity (E) of the surface fire front using eq. 8 from
     Albini and Chase 1980 given:
     - L/W :: (1: circular spread, > 1: elliptical spread)
-
-    E = sqrt( L/W^2 - 1 ) / L/W
     """
     return sqrt(length_to_width_ratio ** 2.0 - 1.0) / length_to_width_ratio
 #+end_src
@@ -2772,7 +2771,7 @@ def calc_surface_fire_behavior_max(surface_fire_min, midflame_wind_speed, upwind
     - upwind_direction       :: degrees clockwise from North
     - slope                  :: rise/run
     - aspect                 :: degrees clockwise from North
-    - use_wind_limit         :: boolean
+    - use_wind_limit         :: boolean (Optional)
 
     return a dictionary containing these keys:
     - max_spread_rate        :: ft/min
@@ -2858,6 +2857,7 @@ this plane from $\vec{u_{\max}}$.
 #+begin_src python
 from math import cos, radians
 import numpy as np
+import pyretechnics.conversion as conv
 
 
 def calc_surface_fire_behavior_from_offset_angle(surface_fire_max, offset_angle):
@@ -2874,8 +2874,8 @@ def calc_surface_fire_behavior_from_offset_angle(surface_fire_max, offset_angle)
 
     return a dictionary containing these keys:
     - fire_type          :: "surface"
-    - spread_rate        :: ft/min
-    - fireline_intensity :: Btu/ft/s
+    - spread_rate        :: m/min
+    - fireline_intensity :: kW/m
     """
     # Unpack max surface fire behavior values
     max_spread_rate        = surface_fire_max["max_spread_rate"]
@@ -2885,8 +2885,8 @@ def calc_surface_fire_behavior_from_offset_angle(surface_fire_max, offset_angle)
     adjustment = (1.0 - eccentricity) / (1.0 - eccentricity * cos(radians(offset_angle)))
     return {
         "fire_type"         : "surface",
-        "spread_rate"       : max_spread_rate * adjustment,
-        "fireline_intensity": max_fireline_intensity * adjustment,
+        "spread_rate"       : conv.ft_to_m(max_spread_rate * adjustment), # m/min
+        "fireline_intensity": conv.Btu_ft_s_to_kW_m(max_fireline_intensity * adjustment), # kW/m
     }
 
 
@@ -2904,8 +2904,8 @@ def calc_surface_fire_behavior_in_direction(surface_fire_max, spread_direction):
 
     return a dictionary containing these keys:
     - fire_type          :: "surface"
-    - spread_rate        :: ft/min
-    - fireline_intensity :: Btu/ft/s
+    - spread_rate        :: m/min
+    - fireline_intensity :: kW/m
     """
     # Unpack max surface fire behavior values
     max_spread_rate        = surface_fire_max["max_spread_rate"]
@@ -2918,8 +2918,8 @@ def calc_surface_fire_behavior_in_direction(surface_fire_max, spread_direction):
     adjustment = (1.0 - eccentricity) / (1.0 - eccentricity * cos_w)
     return {
         "fire_type"         : "surface",
-        "spread_rate"       : max_spread_rate * adjustment,
-        "fireline_intensity": max_fireline_intensity * adjustment,
+        "spread_rate"       : conv.ft_to_m(max_spread_rate * adjustment), # m/min
+        "fireline_intensity": conv.Btu_ft_s_to_kW_m(max_fireline_intensity * adjustment), # kW/m
     }
 #+end_src
 
@@ -3191,33 +3191,33 @@ pprint(backing_fire_behavior2)
 #+begin_example
 Heading Fire Behavior (from Angle) for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
- 'fireline_intensity': 9.396739630785342,
- 'spread_rate': 7.534709026168767}
+ 'fireline_intensity': 32.528241220843796,
+ 'spread_rate': 2.2964672435747535}
 
 Heading Fire Behavior (from Direction) for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
- 'fireline_intensity': 9.396739630785342,
- 'spread_rate': 7.534709026168767}
+ 'fireline_intensity': 32.528241220843796,
+ 'spread_rate': 2.2964672435747535}
 
 Flanking Fire Behavior (from Angle) for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
- 'fireline_intensity': 1.2280611688774694,
- 'spread_rate': 0.9847121381882004}
+ 'fireline_intensity': 4.251120229438466,
+ 'spread_rate': 0.30012561358982026}
 
 Flanking Fire Behavior (from Direction) for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
- 'fireline_intensity': 1.2280611688774694,
- 'spread_rate': 0.9847121381882004}
+ 'fireline_intensity': 4.251120229438466,
+ 'spread_rate': 0.30012561358982026}
 
 Backing Fire Behavior (from Angle) for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
- 'fireline_intensity': 0.6569596575341267,
- 'spread_rate': 0.5267784418793591}
+ 'fireline_intensity': 2.2741656204479725,
+ 'spread_rate': 0.16055423403820757}
 
 Backing Fire Behavior (from Direction) for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
- 'fireline_intensity': 0.6569596575341267,
- 'spread_rate': 0.5267784418793591}
+ 'fireline_intensity': 2.2741656204479725,
+ 'spread_rate': 0.16055423403820757}
 #+end_example
 
 * Crown Fire Equations (pyretechnics.crown_fire)
@@ -3464,11 +3464,11 @@ def calc_crown_fireline_intensity(crown_spread_rate, canopy_bulk_density, canopy
 
 def calc_crown_fire_flame_length(surface_fireline_intensity, crown_fireline_intensity):
     """
-    Returns the crown fire flame length (ft) given:
-    - surface_fireline_intensity :: Btu/ft/s
-    - crown_fireline_intensity   :: Btu/ft/s
+    Returns the crown fire flame length (m) given:
+    - surface_fireline_intensity :: kW/m
+    - crown_fireline_intensity   :: kW/m
     """
-    return calc_flame_length(surface_fireline_intensity + crown_fireline_intensity) # ft
+    return calc_flame_length(surface_fireline_intensity + crown_fireline_intensity) # m
 #+end_src
 
 *** Elliptical Eccentricity
@@ -3492,31 +3492,23 @@ where $U_{20}$ is the 20-ft wind speed in $\text{mph}$.
 #+name: crown-fire-eccentricity
 #+begin_src python
 from math import sqrt
+import pyretechnics.conversion as conv
 
 
 # FIXME: Surface L/W uses 0.25 but Crown L/W uses 0.125. Check Rothermel 1991.
-def crown_length_to_width_ratio(wind_speed_20ft):
+def crown_length_to_width_ratio(wind_speed_10m, max_length_to_width_ratio=None):
     """
     Calculate the length_to_width_ratio of the crown fire front using eq. 9 from
     Rothermel 1991 given:
-    - wind_speed_20ft :: mph
-
-    L/W = 1 + 0.125 * U20_mph
+    - wind_speed_10m            :: km/hr (aligned with the slope-tangential plane)
+    - max_length_to_width_ratio :: float > 0.0 (Optional)
     """
-    return 1.0 + 0.125 * wind_speed_20ft
-
-
-# FIXME: unused
-def crown_length_to_width_ratio_elmfire(wind_speed_20ft, max_length_to_width_ratio):
-    """
-    Calculate the length_to_width_ratio of the crown fire front using eq. 9 from
-    Rothermel 1991 given:
-    - wind_speed_20ft           :: mph
-    - max_length_to_width_ratio :: int > 0
-
-    L/W = min(1.0 + 0.125 * U20_mph, L/W_max)
-    """
-    return min((1.0 + 0.125 * wind_speed_20ft), max_length_to_width_ratio)
+    wind_speed_20ft_mph   = conv.km_hr_to_mph(conv.wind_speed_10m_to_wind_speed_20ft(wind_speed_10m)) # mph
+    length_to_width_ratio = 1.0 + 0.125 * wind_speed_20ft_mph
+    if max_length_to_width_ratio:
+        return min(length_to_width_ratio, max_length_to_width_ratio)
+    else:
+        return length_to_width_ratio
 
 
 def crown_fire_eccentricity(length_to_width_ratio):
@@ -3524,8 +3516,6 @@ def crown_fire_eccentricity(length_to_width_ratio):
     Calculate the eccentricity (E) of the crown fire front using eq. 8 from
     Albini and Chase 1980 given:
     - L/W :: (1: circular spread, > 1: elliptical spread)
-
-    E = sqrt( L/W^2 - 1 ) / L/W
     """
     return sqrt(length_to_width_ratio ** 2.0 - 1.0) / length_to_width_ratio
 #+end_src
@@ -3554,7 +3544,7 @@ import pyretechnics.vector_utils as vu
 
 def calc_crown_fire_behavior_max(canopy_height, canopy_base_height, canopy_bulk_density, heat_of_combustion,
                                  estimated_fine_fuel_moisture, wind_speed_10m, upwind_direction,
-                                 slope, aspect):
+                                 slope, aspect, max_length_to_width_ratio=None):
     """
     Given these inputs:
     - canopy_height                                    :: m
@@ -3566,6 +3556,7 @@ def calc_crown_fire_behavior_max(canopy_height, canopy_base_height, canopy_bulk_
     - upwind_direction                                 :: degrees clockwise from North
     - slope                                            :: rise/run
     - aspect                                           :: degrees clockwise from North
+    - max_length_to_width_ratio                        :: float > 0.0 (Optional)
 
     return a dictionary containing these keys:
     - max_fire_type          :: "passive" or "active"
@@ -3596,10 +3587,9 @@ def calc_crown_fire_behavior_max(canopy_height, canopy_base_height, canopy_bulk_
                                                         estimated_fine_fuel_moisture)
     spread_rate           = spread_info["spread_rate"] # m/min
     fireline_intensity    = calc_crown_fireline_intensity(spread_rate, canopy_bulk_density, canopy_height,
-                                                          canopy_base_height, heat_of_combustion)        # kW/m
-    wind_speed_20ft_mph   = conv.km_hr_to_mph(conv.wind_speed_10m_to_wind_speed_20ft(wind_speed_10m_3d)) # mph
-    length_to_width_ratio = crown_length_to_width_ratio(wind_speed_20ft_mph) # unitless
-    eccentricity          = crown_fire_eccentricity(length_to_width_ratio)   # unitless
+                                                          canopy_base_height, heat_of_combustion) # kW/m
+    length_to_width_ratio = crown_length_to_width_ratio(wind_speed_10m_3d, max_length_to_width_ratio) # unitless
+    eccentricity          = crown_fire_eccentricity(length_to_width_ratio) # unitless
     return {
         "max_fire_type"         : spread_info["fire_type"],
         "max_spread_rate"       : spread_rate,
@@ -3732,8 +3722,8 @@ def calc_combined_fire_behavior(surface_fire_behavior, crown_fire_behavior):
     Given these inputs:
     - surface_fire_behavior :: dictionary of surface fire behavior values
       - fire_type              :: "surface"
-      - spread_rate            :: ft/min
-      - fireline_intensity     :: Btu/ft/s
+      - spread_rate            :: m/min
+      - fireline_intensity     :: kW/m
     - crown_fire_behavior   :: dictionary of crown fire behavior values
       - fire_type              :: "passive" or "active"
       - spread_rate            :: m/min
@@ -3745,9 +3735,9 @@ def calc_combined_fire_behavior(surface_fire_behavior, crown_fire_behavior):
     - fireline_intensity :: kW/m
     """
     # Unpack the surface fire behavior values
-    surface_fire_type          = surface_fire_behavior["fire_type"]                                 # "surface"
-    surface_spread_rate        = conv.ft_to_m(surface_fire_behavior["spread_rate"])                 # m/min
-    surface_fireline_intensity = conv.Btu_ft_s_to_kW_m(surface_fire_behavior["fireline_intensity"]) # kW/m
+    surface_fire_type          = surface_fire_behavior["fire_type"]          # "surface"
+    surface_spread_rate        = surface_fire_behavior["spread_rate"]        # m/min
+    surface_fireline_intensity = surface_fire_behavior["fireline_intensity"] # kW/m
     # Unpack the crown fire behavior values
     crown_fire_type          = crown_fire_behavior["fire_type"]          # "passive" or "active"
     crown_spread_rate        = crown_fire_behavior["spread_rate"]        # m/min
@@ -4266,9 +4256,7 @@ surface_fire_normal = sf.calc_surface_fire_behavior_in_direction(surface_fire_ma
 # Determine whether the surface fire transitions to a crown fire
 #================================================================================================
 
-surface_fireline_intensity = conv.Btu_ft_s_to_kW_m(surface_fire_normal["fireline_intensity"]) # kW/m
-
-if cf.van_wagner_crown_fire_initiation(surface_fireline_intensity,
+if cf.van_wagner_crown_fire_initiation(surface_fire_normal["fireline_intensity"],
                                        canopy_cover,
                                        canopy_base_height,
                                        foliar_moisture):
@@ -4316,8 +4304,8 @@ else:
 : Fire Behavior from Surface Fire (No Crown Fire Occurred)
 : ============================================================
 : {'fire_type': 'surface',
-:  'fireline_intensity': 2.7516947158713765,
-:  'spread_rate': 2.206426891409373}
+:  'fireline_intensity': 9.525409131348322,
+:  'spread_rate': 0.6724860991799368}
 
 * [WIP] Burning Cells on a Grid (pyretechnics.burn_cells)
 ** For Developers
@@ -4337,10 +4325,11 @@ import pyretechnics.vector_utils as vu
 
 
 # TODO: Create a version of this function that runs efficiently over a space_time_region
-def burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, azimuth, use_wind_limit=True):
+def burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, azimuth,
+                             use_wind_limit=True, max_length_to_width_ratio=None):
     """
     Given these inputs:
-    - space_time_cubes      :: dictionary of (Lazy)SpaceTimeCube objects with these cell types
+    - space_time_cubes          :: dictionary of (Lazy)SpaceTimeCube objects with these cell types
       - slope                         :: rise/run
       - aspect                        :: degrees clockwise from North
       - fuel_model                    :: integer index in fm.fuel_model_table
@@ -4358,9 +4347,10 @@ def burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, azimuth, u
       - foliar_moisture               :: kg moisture/kg ovendry weight
       - fuel_spread_adjustment        :: float >= 0.0 (Optional: defaults to 1.0)
       - weather_spread_adjustment     :: float >= 0.0 (Optional: defaults to 1.0)
-    - space_time_coordinate :: (t,y,x)
-    - azimuth               :: degrees clockwise from North on the horizontal plane
-    - use_wind_limit        :: boolean
+    - space_time_coordinate     :: (t,y,x)
+    - azimuth                   :: degrees clockwise from North on the horizontal plane
+    - use_wind_limit            :: boolean (Optional)
+    - max_length_to_width_ratio :: float > 0.0 (Optional)
 
     return a dictionary with these fire behavior values for the space-time coordinate (t,y,x):
     - fire_type          :: "unburned", "surface", "passive", or "active"
@@ -4486,7 +4476,7 @@ def burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, azimuth, u
                                                              upwind_direction,
                                                              slope,
                                                              aspect,
-                                                             use_wind_limit=use_wind_limit)
+                                                             use_wind_limit)
 
         #============================================================================================
         # Calculate surface fire behavior in the direction of the azimuth vector
@@ -4498,9 +4488,7 @@ def burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, azimuth, u
         # Determine whether the surface fire transitions to a crown fire
         #============================================================================================
 
-        surface_fireline_intensity = conv.Btu_ft_s_to_kW_m(surface_fire_azimuth["fireline_intensity"]) # kW/m
-
-        if cf.van_wagner_crown_fire_initiation(surface_fireline_intensity,
+        if cf.van_wagner_crown_fire_initiation(surface_fire_azimuth["fireline_intensity"],
                                                canopy_cover,
                                                canopy_base_height,
                                                foliar_moisture):
@@ -4513,7 +4501,7 @@ def burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, azimuth, u
                                                              canopy_bulk_density, heat_of_combustion,
                                                              estimated_fine_fuel_moisture,
                                                              wind_speed_10m, upwind_direction,
-                                                             slope, aspect)
+                                                             slope, aspect, max_length_to_width_ratio)
 
             #========================================================================================
             # Calculate crown fire behavior in the direction of the azimuth vector
