--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2358,7 +2358,7 @@ Because of the linear relationship between spread rate, flame depth,
 and fireline intensity, once we have calculated the no wind, no slope
 fireline intensity, we can simply multiply it by the same combined
 wind and slope factor that is applied to the no wind, no slope spread
-rate in order to derive the final fireline intensity.
+rate in order to derive the maximum fireline intensity.
 
 Since flame length's relationship to fireline intensity is non-linear,
 we will need to wait until after any transformations are applied to
@@ -2386,6 +2386,10 @@ reaction intensity $I_R$ as follows:[fn::Albini1976]
   U_{\text{eff}}^{\max} = 0.9 \, I_R
 \end{align}
 
+where $I_R$ is the reaction intensity in $\text{Btu}/\text{ft}^2/\min$
+and $U_{\text{eff}}^{\max}$ is the maximum effective wind speed in
+$\text{ft}/\min$
+
 #+name: surface-fire-max-effective-wind-speed
 #+begin_src python
 def calc_max_effective_wind_speed(reaction_intensity):
@@ -2408,10 +2412,13 @@ def get_phi_S_fn(beta):
 
 #+name: surface-fire-wind-factor-function
 #+begin_src python
+import pyretechnics.conversion as conv
+
+
 def get_phi_W_fn(beta, B, C, F):
     if (beta > 0.0):
         C_over_F = C / F
-        return lambda midflame_wind_speed: (midflame_wind_speed ** B) * C_over_F
+        return lambda midflame_wind_speed: (conv.m_to_ft(midflame_wind_speed) ** B) * C_over_F
     else:
         return lambda _: 0.0
 #+end_src
@@ -2420,16 +2427,22 @@ def get_phi_W_fn(beta, B, C, F):
 
 #+name: surface-fire-wind-speed-function
 #+begin_src python
+import pyretechnics.conversion as conv
+
+
 def get_wind_speed_fn(B, C, F):
     F_over_C  = F / C
     B_inverse = 1.0 / B
-    return lambda phi_W: (phi_W * F_over_C) ** B_inverse
+    return lambda phi_W: conv.ft_to_m((phi_W * F_over_C) ** B_inverse)
 #+end_src
 
 *** Surface Fire Behavior Functions (No Wind No Slope)
 
 #+name: surface-fire-behavior-no-wind-no-slope
 #+begin_src python
+import pyretechnics.conversion as conv
+
+
 def calc_surface_fire_behavior_no_wind_no_slope(moisturized_fuel_model, spread_rate_adjustment=1.0):
     """
     Given these inputs:
@@ -2449,12 +2462,12 @@ def calc_surface_fire_behavior_no_wind_no_slope(moisturized_fuel_model, spread_r
     - spread_rate_adjustment :: unitless float (1.0 for no adjustment)
 
     return a dictionary containing these keys:
-    - base_spread_rate         :: ft/min
-    - base_fireline_intensity  :: Btu/ft/s
-    - max_effective_wind_speed :: ft/min
-    - get_phi_S                :: lambda: slope => phi_S
-    - get_phi_W                :: lambda: midflame_wind_speed => phi_W
-    - get_wind_speed           :: lambda: phi_W => midflame_wind_speed
+    - base_spread_rate         :: m/min
+    - base_fireline_intensity  :: kW/m
+    - max_effective_wind_speed :: m/min
+    - get_phi_S                :: lambda: slope (rise/run) => phi_S (unitless)
+    - get_phi_W                :: lambda: midflame_wind_speed (m/min) => phi_W (unitless)
+    - get_wind_speed           :: lambda: phi_W (unitless) => midflame_wind_speed (m/min)
     """
     # Unpack fuel model values
     delta          = moisturized_fuel_model["delta"]
@@ -2491,9 +2504,9 @@ def calc_surface_fire_behavior_no_wind_no_slope(moisturized_fuel_model, spread_r
     get_wind_speed = get_wind_speed_fn(B, C, F)
     # Return no-wind-no-slope surface fire behavior values
     return {
-        "base_spread_rate"        : R0 * spread_rate_adjustment,
-        "base_fireline_intensity" : I_s * spread_rate_adjustment,
-        "max_effective_wind_speed": U_eff_max,
+        "base_spread_rate"        : conv.ft_to_m(R0 * spread_rate_adjustment),
+        "base_fireline_intensity" : conv.Btu_ft_s_to_kW_m(I_s * spread_rate_adjustment),
+        "max_effective_wind_speed": conv.ft_to_m(U_eff_max),
         "get_phi_S"               : get_phi_S,
         "get_phi_W"               : get_phi_W,
         "get_wind_speed"          : get_wind_speed,
@@ -2674,16 +2687,16 @@ where $U_{\text{eff}}$ is the effective wind speed in $\text{mph}$.
 #+name: surface-fire-eccentricity
 #+begin_src python
 from math import exp, sqrt
-from pyretechnics.conversion import fpm_to_mph
+from pyretechnics.conversion import m_min_to_mph
 
 
 def surface_length_to_width_ratio(effective_wind_speed):
     """
     Calculate the length_to_width_ratio of the surface fire front using eq. 9 from
     Rothermel 1991 given:
-    - effective_wind_speed :: ft/min (aligned with the slope-tangential plane)
+    - effective_wind_speed :: m/min (aligned with the slope-tangential plane)
     """
-    effective_wind_speed_mph = fpm_to_mph(effective_wind_speed)
+    effective_wind_speed_mph = m_min_to_mph(effective_wind_speed)
     return 1.0 + 0.25 * effective_wind_speed_mph
 
 
@@ -2691,11 +2704,11 @@ def surface_length_to_width_ratio(effective_wind_speed):
 def surface_length_to_width_ratio_elmfire(effective_wind_speed):
     """
     Calculate the length_to_width_ratio of the surface fire front given:
-    - effective_wind_speed :: ft/min
+    - effective_wind_speed :: m/min (aligned with the slope-tangential plane)
 
     L/W = min(0.936 * e^(0.2566 * Ueff_mph) + 0.461 * e^(-0.1548 * Ueff_mph) - 0.397, 8.0)
     """
-    effective_wind_speed_mph = fpm_to_mph(effective_wind_speed)
+    effective_wind_speed_mph = m_min_to_mph(effective_wind_speed)
     return min((0.936 * exp(0.2566 * effective_wind_speed_mph))
                +
                (0.461 * exp(-0.1548 * effective_wind_speed_mph))
@@ -2742,6 +2755,18 @@ from pyretechnics.vector_utils import vector_magnitude
 
 
 def maybe_limit_wind_speed(use_wind_limit, max_wind_speed, get_phi_W, get_wind_speed, phi_E_magnitude):
+    """
+    Given these inputs:
+    - use_wind_limit  :: boolean
+    - max_wind_speed  :: m/min
+    - get_phi_W       :: lambda: midflame_wind_speed (m/min) => phi_W (unitless)
+    - get_wind_speed  :: lambda: phi_W (unitless) => midflame_wind_speed (m/min)
+    - phi_E_magnitude :: unitless
+
+    return a tuple with these fields:
+    - limited_wind_speed :: m/min
+    - limited_phi_E      :: unitless
+    """
     effective_wind_speed = get_wind_speed(phi_E_magnitude)
     if (use_wind_limit and effective_wind_speed > max_wind_speed):
         return (
@@ -2761,23 +2786,23 @@ def calc_surface_fire_behavior_max(surface_fire_min, midflame_wind_speed, upwind
     """
     Given these inputs:
     - surface_fire_min       :: dictionary of no-wind-no-slope surface fire behavior values
-      - base_spread_rate         :: ft/min
-      - base_fireline_intensity  :: Btu/ft/s
-      - max_effective_wind_speed :: ft/min
-      - get_phi_S                :: lambda: slope => phi_S
-      - get_phi_W                :: lambda: midflame_wind_speed => phi_W
-      - get_wind_speed           :: lambda: phi_W => midflame_wind_speed
-    - midflame_wind_speed    :: ft/min
+      - base_spread_rate         :: m/min
+      - base_fireline_intensity  :: kW/m
+      - max_effective_wind_speed :: m/min
+      - get_phi_S                :: lambda: slope (rise/run) => phi_S (unitless)
+      - get_phi_W                :: lambda: midflame_wind_speed (m/min) => phi_W (unitless)
+      - get_wind_speed           :: lambda: phi_W (unitless) => midflame_wind_speed (m/min)
+    - midflame_wind_speed    :: m/min
     - upwind_direction       :: degrees clockwise from North
     - slope                  :: rise/run
     - aspect                 :: degrees clockwise from North
     - use_wind_limit         :: boolean (Optional)
 
     return a dictionary containing these keys:
-    - max_spread_rate        :: ft/min
+    - max_spread_rate        :: m/min
     - max_spread_direction   :: (x, y, z) unit vector
-    - max_spread_vector      :: (x: ft/min, y: ft/min, z: ft/min)
-    - max_fireline_intensity :: Btu/ft/s
+    - max_spread_vector      :: (x: m/min, y: m/min, z: m/min)
+    - max_fireline_intensity :: kW/m
     - length_to_width_ratio  :: unitless (1: circular spread, > 1: elliptical spread)
     - eccentricity           :: unitless (0: circular spread, > 0: elliptical spread)
     """
@@ -2793,7 +2818,7 @@ def calc_surface_fire_behavior_max(surface_fire_min, midflame_wind_speed, upwind
     upslope_direction  = opposite_direction(aspect)
     # Project wind and slope vectors onto the slope-tangential plane
     vectors = project_wind_and_slope_vectors_3d(midflame_wind_speed, downwind_direction, slope, upslope_direction)
-    wind_vector_3d  = vectors["wind_vector_3d"]  # ft/min
+    wind_vector_3d  = vectors["wind_vector_3d"]  # m/min
     slope_vector_3d = vectors["slope_vector_3d"] # rise/run
     # Calculate phi_W and phi_S
     phi_W = get_phi_W(vector_magnitude(wind_vector_3d)) # |wind_vector_3d| = slope-aligned midflame wind speed
@@ -2857,17 +2882,16 @@ this plane from $\vec{u_{\max}}$.
 #+begin_src python
 from math import cos, radians
 import numpy as np
-import pyretechnics.conversion as conv
 
 
 def calc_surface_fire_behavior_from_offset_angle(surface_fire_max, offset_angle):
     """
     Given these inputs:
     - surface_fire_max     :: dictionary of max surface fire behavior values
-      - max_spread_rate        :: ft/min
+      - max_spread_rate        :: m/min
       - max_spread_direction   :: (x, y, z) unit vector
-      - max_spread_vector      :: (x: ft/min, y: ft/min, z: ft/min)
-      - max_fireline_intensity :: Btu/ft/s
+      - max_spread_vector      :: (x: m/min, y: m/min, z: m/min)
+      - max_fireline_intensity :: kW/m
       - length_to_width_ratio  :: unitless (1: circular spread, > 1: elliptical spread)
       - eccentricity           :: unitless (0: circular spread, > 0: elliptical spread)
     - offset_angle         :: degrees clockwise from max spread direction on the slope-tangential plane
@@ -2885,8 +2909,8 @@ def calc_surface_fire_behavior_from_offset_angle(surface_fire_max, offset_angle)
     adjustment = (1.0 - eccentricity) / (1.0 - eccentricity * cos(radians(offset_angle)))
     return {
         "fire_type"         : "surface",
-        "spread_rate"       : conv.ft_to_m(max_spread_rate * adjustment), # m/min
-        "fireline_intensity": conv.Btu_ft_s_to_kW_m(max_fireline_intensity * adjustment), # kW/m
+        "spread_rate"       : max_spread_rate * adjustment,
+        "fireline_intensity": max_fireline_intensity * adjustment,
     }
 
 
@@ -2894,10 +2918,10 @@ def calc_surface_fire_behavior_in_direction(surface_fire_max, spread_direction):
     """
     Given these inputs:
     - surface_fire_max     :: dictionary of max surface fire behavior values
-      - max_spread_rate        :: ft/min
+      - max_spread_rate        :: m/min
       - max_spread_direction   :: (x, y, z) unit vector
-      - max_spread_vector      :: (x: ft/min, y: ft/min, z: ft/min)
-      - max_fireline_intensity :: Btu/ft/s
+      - max_spread_vector      :: (x: m/min, y: m/min, z: m/min)
+      - max_fireline_intensity :: kW/m
       - length_to_width_ratio  :: unitless (1: circular spread, > 1: elliptical spread)
       - eccentricity           :: unitless (0: circular spread, > 0: elliptical spread)
     - spread_direction     :: 3D unit vector on the slope-tangential plane
@@ -2918,8 +2942,8 @@ def calc_surface_fire_behavior_in_direction(surface_fire_max, spread_direction):
     adjustment = (1.0 - eccentricity) / (1.0 - eccentricity * cos_w)
     return {
         "fire_type"         : "surface",
-        "spread_rate"       : conv.ft_to_m(max_spread_rate * adjustment), # m/min
-        "fireline_intensity": conv.Btu_ft_s_to_kW_m(max_fireline_intensity * adjustment), # kW/m
+        "spread_rate"       : max_spread_rate * adjustment,
+        "fireline_intensity": max_fireline_intensity * adjustment,
     }
 #+end_src
 
@@ -2985,9 +3009,9 @@ pprint({k: surface_fire_min[k] for k in ["base_spread_rate", "base_fireline_inte
 
 #+RESULTS: compute-surface-fire-behavior-min
 : No-Wind-No-Slope Surface Fire Behavior for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
-: {'base_fireline_intensity': 0.5170935602088539,
-:  'base_spread_rate': 0.4146278037453475,
-:  'max_effective_wind_speed': 360.16497623341843}
+: {'base_fireline_intensity': 1.789997884491001,
+:  'base_spread_rate': 0.12637238760906658,
+:  'max_effective_wind_speed': 109.77292783706747}
 
 *** How to Translate the 10m Wind Speed Vector into the Midflame Wind Speed Vector
 
@@ -3046,7 +3070,7 @@ fuel_moisture = [
     0.90, # live_herbaceous
     0.60, # live_woody
 ]
-midflame_wind_speed = 500.0 # ft/min
+midflame_wind_speed = 500.0 # m/min
 upwind_direction    = 215.0 # degrees clockwise from North
 slope               = 0.2   # rise/run
 aspect              = 270.0 # degrees clockwise from North
@@ -3086,20 +3110,20 @@ pprint(surface_fire_max_unlimited)
 #+RESULTS: compute-surface-fire-behavior-max
 #+begin_example
 Surface Fire Behavior Max (Limited) for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
-{'eccentricity': 0.8693098652160023,
- 'length_to_width_ratio': 2.0231959552085748,
- 'max_fireline_intensity': 9.396739630785342,
- 'max_spread_direction': array([0.6021465 , 0.78925051, 0.1204293 ]),
- 'max_spread_rate': 7.534709026168767,
- 'max_spread_vector': array([4.53699868, 5.94677298, 0.90739974])}
+{'eccentricity': 0.8693098652160369,
+ 'length_to_width_ratio': 2.0231959552088243,
+ 'max_fireline_intensity': 32.52824122084378,
+ 'max_spread_direction': array([0.57514211, 0.80992593, 0.11502842]),
+ 'max_spread_rate': 2.2964672435747526,
+ 'max_spread_vector': array([1.32079503, 1.85996837, 0.26415901])}
 
 Surface Fire Behavior Max (Unlimited) for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
-{'eccentricity': 0.9135213311005909,
- 'length_to_width_ratio': 2.4582658495062284,
- 'max_fireline_intensity': 15.912209110268435,
- 'max_spread_direction': array([0.6021465 , 0.78925051, 0.1204293 ]),
- 'max_spread_rate': 12.759092017047216,
- 'max_spread_vector': array([ 7.68284262, 10.07011994,  1.53656852])}
+{'eccentricity': 0.9845208632281957,
+ 'length_to_width_ratio': 5.705566830080509,
+ 'max_fireline_intensity': 330.523270465988,
+ 'max_spread_direction': array([0.57514211, 0.80992593, 0.11502842]),
+ 'max_spread_rate': 23.334672745170035,
+ 'max_spread_vector': array([13.42075301, 18.8993565 ,  2.6841506 ])}
 #+end_example
 
 *** How to Calculate the Surface Fire Behavior in Any Direction
@@ -3121,7 +3145,7 @@ fuel_moisture = [
     0.90, # live_herbaceous
     0.60, # live_woody
 ]
-midflame_wind_speed = 500.0 # ft/min
+midflame_wind_speed = 500.0 # m/min
 upwind_direction    = 215.0 # degrees clockwise from North
 slope               = 0.2   # rise/run
 aspect              = 270.0 # degrees clockwise from North
@@ -3191,33 +3215,33 @@ pprint(backing_fire_behavior2)
 #+begin_example
 Heading Fire Behavior (from Angle) for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
- 'fireline_intensity': 32.528241220843796,
- 'spread_rate': 2.2964672435747535}
+ 'fireline_intensity': 32.52824122084378,
+ 'spread_rate': 2.2964672435747526}
 
 Heading Fire Behavior (from Direction) for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
- 'fireline_intensity': 32.528241220843796,
- 'spread_rate': 2.2964672435747535}
+ 'fireline_intensity': 32.528241220843725,
+ 'spread_rate': 2.2964672435747486}
 
 Flanking Fire Behavior (from Angle) for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
- 'fireline_intensity': 4.251120229438466,
- 'spread_rate': 0.30012561358982026}
+ 'fireline_intensity': 4.251120229437338,
+ 'spread_rate': 0.3001256135897406}
 
 Flanking Fire Behavior (from Direction) for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
- 'fireline_intensity': 4.251120229438466,
- 'spread_rate': 0.30012561358982026}
+ 'fireline_intensity': 4.251120229437339,
+ 'spread_rate': 0.30012561358974066}
 
 Backing Fire Behavior (from Angle) for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
- 'fireline_intensity': 2.2741656204479725,
- 'spread_rate': 0.16055423403820757}
+ 'fireline_intensity': 2.274165620447327,
+ 'spread_rate': 0.16055423403816196}
 
 Backing Fire Behavior (from Direction) for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
- 'fireline_intensity': 2.2741656204479725,
- 'spread_rate': 0.16055423403820757}
+ 'fireline_intensity': 2.2741656204473273,
+ 'spread_rate': 0.160554234038162}
 #+end_example
 
 * Crown Fire Equations (pyretechnics.crown_fire)
@@ -4211,7 +4235,7 @@ fire_perimeter_normal_vector_2d = (1.0, 0.0) # (x,y) unit vector pointing East
 
 upslope_direction               = conv.opposite_direction(aspect)
 slope_vector_2d                 = conv.azimuthal_to_cartesian(slope, upslope_direction)
-fire_perimeter_normal_vector_3d = vu.to_slope_plane(fire_perimeter_normal_vector_2d, slope_vector_2d)
+fire_perimeter_normal_vector_3d = vu.as_unit_vector(vu.to_slope_plane(fire_perimeter_normal_vector_2d, slope_vector_2d))
 
 #================================================================================================
 # Calculate midflame wind speed
@@ -4220,14 +4244,16 @@ fire_perimeter_normal_vector_3d = vu.to_slope_plane(fire_perimeter_normal_vector
 # Convert from 10m wind speed to 20ft wind speed
 wind_speed_20ft = conv.wind_speed_10m_to_wind_speed_20ft(wind_speed_10m) # km/hr
 
-# Convert 20ft wind speed from km/hr to ft/min
-wind_speed_20ft_ft_min = conv.m_to_ft(conv.km_hr_to_m_min(wind_speed_20ft)) # ft/min
+# Convert 20ft wind speed from km/hr to m/min
+wind_speed_20ft_m_min = conv.km_hr_to_m_min(wind_speed_20ft) # m/min
 
 # Convert from 20ft wind speed to midflame wind speed
-midflame_wind_speed = sf.calc_midflame_wind_speed(wind_speed_20ft_ft_min,      # ft/min
-                                                  fuel_bed_depth,              # ft
-                                                  conv.m_to_ft(canopy_height), # ft
-                                                  canopy_cover)                # 0-1
+midflame_wind_speed = conv.ft_to_m(
+    sf.calc_midflame_wind_speed(conv.m_to_ft(wind_speed_20ft_m_min), # ft/min
+                                fuel_bed_depth,                      # ft
+                                conv.m_to_ft(canopy_height),         # ft
+                                canopy_cover)                        # 0-1
+) # m/min
 
 #================================================================================================
 # Calculate surface fire behavior in the direction of maximum spread
@@ -4304,8 +4330,8 @@ else:
 : Fire Behavior from Surface Fire (No Crown Fire Occurred)
 : ============================================================
 : {'fire_type': 'surface',
-:  'fireline_intensity': 9.525409131348322,
-:  'spread_rate': 0.6724860991799368}
+:  'fireline_intensity': 8.720636300499834,
+:  'spread_rate': 0.6156697950946667}
 
 * [WIP] Burning Cells on a Grid (pyretechnics.burn_cells)
 ** For Developers
@@ -4449,14 +4475,16 @@ def burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, azimuth,
         # Convert from 10m wind speed to 20ft wind speed
         wind_speed_20ft = conv.wind_speed_10m_to_wind_speed_20ft(wind_speed_10m) # km/hr
 
-        # Convert 20ft wind speed from km/hr to ft/min
-        wind_speed_20ft_ft_min = conv.m_to_ft(conv.km_hr_to_m_min(wind_speed_20ft)) # ft/min
+        # Convert 20ft wind speed from km/hr to m/min
+        wind_speed_20ft_m_min = conv.km_hr_to_m_min(wind_speed_20ft) # m/min
 
         # Convert from 20ft wind speed to midflame wind speed
-        midflame_wind_speed = sf.calc_midflame_wind_speed(wind_speed_20ft_ft_min,      # ft/min
-                                                          fuel_bed_depth,              # ft
-                                                          conv.m_to_ft(canopy_height), # ft
-                                                          canopy_cover)                # 0-1
+        midflame_wind_speed = conv.ft_to_m(
+            sf.calc_midflame_wind_speed(conv.m_to_ft(wind_speed_20ft_m_min), # ft/min
+                                        fuel_bed_depth,                      # ft
+                                        conv.m_to_ft(canopy_height),         # ft
+                                        canopy_cover)                        # 0-1
+        ) # m/min
 
         #============================================================================================
         # Calculate surface fire behavior in the direction of maximum spread
@@ -4465,8 +4493,8 @@ def burn_cell_toward_azimuth(space_time_cubes, space_time_coordinate, azimuth,
         # Apply fuel moisture to fuel model
         moisturized_fuel_model = fm.moisturize(fuel_model, fuel_moisture)
 
-        # Calculate no-wind-no-slope surface fire behavior
         # TODO: Memoize calc_surface_fire_behavior_no_wind_no_slope
+        # Calculate no-wind-no-slope surface fire behavior
         surface_fire_min = sf.calc_surface_fire_behavior_no_wind_no_slope(moisturized_fuel_model,
                                                                           spread_rate_adjustment)
 
